add heroku settings

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="OMgqBOS4ZhbodVcyPiNrVUA3nPE09Lj9gO7OK3tB6ZI+06DouNzAmZJU+jgzDSbSAX2gK1WraxUD+RVayakYUQ==" />
+  <script type="text/javascript">
+    window.onload = function () {
+      location.href = "https://dry-beach-36952.herokuapp.com/et.html";
+    };
+  </script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top navbar-inverse">
@@ -46,7 +51,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a type="button" class="btn btn-lg btn-default" href=""><span class="glyphicon glyphicon-flash"></span> Step1 </a>
+    <a type="button" class="btn btn-lg btn-default" href="https://dry-beach-36952.herokuapp.com/et.html"><span class="glyphicon glyphicon-flash"></span> Step1 </a>
   </div>
 </div>
 
