add heroku settings

--- a/public/et.html
+++ b/public/et.html
@@ -46,7 +46,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span> Step1 </a>
+    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span> ET </a>
   </div>
 </div>
 
