--- a/public/finish.html
+++ b/public/finish.html
@@ -51,7 +51,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span> Step1 </a>
+    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span> FINISH </a>
   </div>
 </div>
 
