--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -51,7 +50,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a type="button" class="btn btn-lg btn-default" href="https://dry-beach-36952.herokuapp.com/et.html"><span class="glyphicon glyphicon-flash"></span> Step1 </a>
+    <a type="button" class="btn btn-lg btn-default" href="https://dry-beach-36952.herokuapp.com/et.html"><span class="glyphicon glyphicon-flash"></span> THIS IS INDEX </a>
   </div>
 </div>
 
