--- a/public/et.html
+++ b/public/et.html
@@ -1,21 +1,28 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>Ruby Getting Started on Heroku</title>
   <script src="https://calm-wave-57777.herokuapp.com/assets/application-a28559506691956cf975ecc0992d16f83c609962bca6c25154dab4926edd97a9.js" data-turbolinks-track="true"></script>
-  <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-  <link rel="stylesheet" media="all" href="https://calm-wave-57777.herokuapp.com/assets/application-4b3e7d10f15531ed01fb27360f045b1be6bfd6a2788cbe7cba29ebf78f04be4b.css" data-turbolinks-track="true" />
+  <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
+  <link rel="stylesheet" media="all" href="https://calm-wave-57777.herokuapp.com/assets/application-4b3e7d10f15531ed01fb27360f045b1be6bfd6a2788cbe7cba29ebf78f04be4b.css" data-turbolinks-track="true"/>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="OMgqBOS4ZhbodVcyPiNrVUA3nPE09Lj9gO7OK3tB6ZI+06DouNzAmZJU+jgzDSbSAX2gK1WraxUD+RVayakYUQ==" />
+  <meta name="csrf-param" content="authenticity_token"/>
+  <meta name="csrf-token" content="OMgqBOS4ZhbodVcyPiNrVUA3nPE09Lj9gO7OK3tB6ZI+06DouNzAmZJU+jgzDSbSAX2gK1WraxUD+RVayakYUQ=="/>
 </head>
 <body>
 
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span> GIFT </a>
+    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span>
+      GIFT </a>
+  </div>
+  <div class="container">
+
+    <form action="https://4c01cefd.ngrok.io/finish.html" method="GET">
+      <input type="hidden" name="sample" value="sample">
+      <input type="submit" class="btn btn-lg btn-default" value="GIFT FORM">
+    </form>
   </div>
 </div>
 
