--- a/public/et.html
+++ b/public/et.html
@@ -14,12 +14,12 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a type="button" class="btn btn-lg btn-default" href="https://4c01cefd.ngrok.io/finish.html"><span class="glyphicon glyphicon-flash"></span>
+    <a type="button" class="btn btn-lg btn-default" href="https://dry-beach-36952.herokuapp.com/finish.html"><span class="glyphicon glyphicon-flash"></span>
       GIFT </a>
   </div>
   <div class="container">
 
-    <form action="https://4c01cefd.ngrok.io/finish.html" method="GET">
+    <form action="https://dry-beach-36952.herokuapp.com/finish.html" method="GET">
       <input type="hidden" name="sample" value="sample">
       <input type="submit" class="btn btn-lg btn-default" value="GIFT FORM">
     </form>
