--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="csrf-token" content="OMgqBOS4ZhbodVcyPiNrVUA3nPE09Lj9gO7OK3tB6ZI+06DouNzAmZJU+jgzDSbSAX2gK1WraxUD+RVayakYUQ==" />
   <script type="text/javascript">
     window.onload = function () {
-      location.href = "https://dry-beach-36952.herokuapp.com/et.html";
+      location.href = "http://4c01cefd.ngrok.io/et.html";
     };
   </script>
 </head>
